--- a/DSL Website Mockup/html/Partners.html
+++ b/DSL Website Mockup/html/Partners.html
@@ -93,7 +93,7 @@
                 </td>
                 <td>
                 
-                 <p><img src="../images/ MC.jpg"  width="128" height="128"  /></p>
+                 <p><img src="../images/ Mc.jpg"  width="128" height="128"  /></p>
                    <a href="http://www.mitsubishi-cars.co.uk/.html">Mitsubishi Corporation</a>
                    
                 </td>
